samples/_failures_safe/1761493756_e6c8f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25584acf.c: In function ‘main’:
./samples/SAFE/__tmp_25584acf.c:193:25: error: missing terminating " character
  193 |         fprintf(stderr, "
      |                         ^
./samples/SAFE/__tmp_25584acf.c:193:9: error: expected expression at end of input
  193 |         fprintf(stderr, "
      |         ^~~~~~~
./samples/SAFE/__tmp_25584acf.c:193:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_25584acf.c:193:9: error: expected declaration or statement at end of input
